TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "131283093289520" [label="Start"];
  "131283093289520" -> "131283093289760";
  "131283093289760" [label="Code"];
  "131283093289760" -> "131283093287456";
  "131283093287456" [label="Function"];
  "131283093287456" -> "131283093290288";
  "131283093287456" -> "131283093342672";
  "131283093287456" -> "131283093346032";
  "131283093290288" [label="main IDENTIFIER"];
  "131283093342672" [label="Parameters"];
  "131283093346032" [label="Code"];
  "131283093346032" -> "131283093344112";
  "131283093346032" -> "131283093344352";
  "131283093346032" -> "131283093346320";
  "131283093344112" [label="Code"];
  "131283093344112" -> "131283093341712";
  "131283093341712" [label="Declaration"];
  "131283093341712" -> "131283093344592";
  "131283093341712" -> "131283093341568";
  "131283093344592" [label="x IDENTIFIER"];
  "131283093341568" [label="1 INT"];
  "131283093344352" [label="Code"];
  "131283093344352" -> "131283093344688";
  "131283093344688" [label="Declaration"];
  "131283093344688" -> "131283093342144";
  "131283093344688" -> "131283093345600";
  "131283093342144" [label="x IDENTIFIER"];
  "131283093345600" [label="2 INT"];
  "131283093346320" [label="Return"];
  "131283093346320" -> "131283093347040";
  "131283093347040" [label="0 INT"];
}
